# audience

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  clean.bat  clean.sh  dist.bat  dist.sh  notes_native_deployment.md  notes_other.md  todo.md
.github/workflows/: main.yaml
examples/ping/: README.md
examples/ping/backend/: CMakeLists.txt  build.bat  build.sh  clean.bat  main.cpp  main.js  ping.cpp  ping.h  quotes.js  utf.h
examples/ping/webapp/: index.html  package.json  webpack.config.js
examples/ping/webapp/src/: main.js
examples/terminal/: README.md
examples/terminal/backend/: clean.sh  main.js  main.ts  package.json
examples/terminal/backend_nodejs/: .gitignore  package.json  quotes.ts  tsconfig.json
examples/terminal/webapp/: index.html
frontend/: index.d.ts  index.js  package.json
include/: audience.h  audience_api.h  audience_details.h
integrations/backend/nodejs/: .gitignore  README.md  clean.sh  index.d.ts  index.js  index.ts  package-lock.json  package.json  postinstall.ts
integrations/frontend/: README.md  clean.sh  index.ts  package-lock.json  package.json  tsconfig.json
src/: app.cpp  inner.h  lib.cpp  trace.h
src/common/: demangle.h  fmt_exception.h  fs.h  logger.h  memory_scope.h  nucleus_interface_details.h  safefn.h  scope_guard.h  sys_error.h  trace.h
src/macos/: webkit.cpp  webkit.m  webkit.mm
src/nucleus/: interface.cpp  interface.h
src/nucleus/macos/: handle.h  webkit.mm
src/nucleus/macos/webkit/: interface.mm  nucleus.h  nucleus.mm
src/nucleus/shared/: interface.h  safefn.h
src/nucleus/unix/: handle.h  interface.cpp  webkit.cpp
src/nucleus/unix/webkit/: gtk_weak_symbols.h  interface.cpp  nucleus.cpp  nucleus.h
src/nucleus/windows/: common.cpp  edge.cpp  edge_handle.h  edge_interface.cpp  ie11.cpp  ie11_interface.cpp  ie11_webview.cpp  ie11_webview.h  resource.rc
src/nucleus/windows/edge/: interface.cpp  nucleus.cpp  nucleus.h  security.cpp  security.h  stream_resolver.h  wait.h
src/nucleus/windows/ie11/: interface.cpp  nucleus.cpp  nucleus.h  webview.cpp  webview.h
src/nucleus/windows/shared/: icons.cpp  icons.h  init.cpp  load.cpp  load.h  resource.h
src/shared/: nucleus_api_details.h
src/shell/: app.cpp  lib.cpp  nucleus.h  quotes.cpp  util.h
src/shell/app/: args.h  channel.cpp  channel.h  main.cpp  quotes.cpp
src/shell/lib/: lib.cpp  lib.h  nucleus.h  util.h  whereami.h
src/shell/lib/webserver/: context.h  handle_request.impl.h  http_session.impl.h  listener.impl.h  path_util.impl.h  process.cpp  process.h  websocket_session.impl.h
src/shell/webserver/: context.h  handle_request.impl.h  http_session.impl.h  listener.impl.h  mime_type.impl.h  process.cpp  process.h  websocket_session.impl.h
src/unix/: webkit.cpp
src/webapp/messaging/: edge.js  websocket.js
src/windows/: common.cpp  common.h  edge.cpp  ie11.cpp  ie11_webview.cpp  resource.h  resource.rc
